# lif-figure

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: metadata-extraction.md
docs/plans/: 2026-01-21-auto-contrast-design.md  2026-01-21-lif-figure-cli-design.md  2026-01-21-lif-figure-cli-implementation.md  2026-01-21-metadata-table-design.md  2026-01-21-napari-figure-maker-design.md  2026-01-21-napari-figure-maker-implementation.md  2026-01-21-robust-detector-extraction-design.md  2026-01-21-series-index-validation-design.md  2026-01-21-series-index-validation-impl.md
src/lif_figure/: __init__.py  cli.py  config.py  figure.py  reader.py
src/napari_figure_maker/: __init__.py  _lif_reader.py  _widget.py  exporter.py  figure_builder.py  models.py  napari.yaml  presets.py  scale_bar.py
tests/: conftest.py  test_cli.py  test_exporter.py  test_figure_builder.py  test_integration.py  test_lif_reader.py  test_models.py  test_presets.py  test_scale_bar.py  test_widget.py
tests/lif_figure/: test_config.py  test_figure.py  test_integration.py  test_reader.py
