[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napari-figure-maker"
version = "0.1.0"
description = "Create publication-ready multichannel figure panels from microscopy images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Framework :: napari",
]
dependencies = [
    "napari>=0.4.18",
    "numpy",
    "pillow",
    "pyyaml",
    "readlif",
    "qtpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
]

[project.entry-points."napari.manifest"]
napari-figure-maker = "napari_figure_maker:napari.yaml"

[tool.hatch.build.targets.wheel]
packages = ["src/napari_figure_maker"]
