[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napari-figure-maker"
version = "0.1.0"
description = "Create publication-ready multichannel figure panels from microscopy images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Framework :: napari",
]
dependencies = [
    "napari>=0.4.18",
    "numpy",
    "pillow",
    "pyyaml",
    "readlif",
    "qtpy",
    "click>=8.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
]

[project.entry-points."napari.manifest"]
napari-figure-maker = "napari_figure_maker:napari.yaml"

[project.scripts]
lif-figure = "lif_figure.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/napari_figure_maker", "src/lif_figure"]

[dependency-groups]
dev = [
    "pyqt6>=6.10.2",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]
