[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lif-figure"
version = "0.1.0"
description = "Generate publication-ready figure panels from Leica LIF microscopy files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "pyyaml",
    "readlif",
    "click>=8.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
lif-figure = "lif_figure.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lif_figure"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
